--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^4.4.9",
     "next": "^14.2.29",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^4.1.8",
-    "chart.js": "^4.4.9",
-    "react-chartjs-2": "^5.3.0"
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
+    "@types/node": "22.15.29",
+    "@types/react": "19.1.6",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.4"
+    "postcss": "^8.5.4",
+    "typescript": "5.8.3"
   }
 }
