--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
+  },
+  "dependencies": {
+    "zustand": "^5.0.5"
   }
 }
